--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -21,7 +21,7 @@ header {
 }
 
 .logo img {
-    height:30px;
+    height: 30px;
 }
 
 .header-nav {
@@ -34,31 +34,31 @@ header {
     list-style: none;
 }
 
-.onglets {
+.tabs {
     display: flex;
     width: 75%;
 }
 
-.onglets ul {
+.tabs ul {
     display: flex;
-    width:100%;
+    width: 100%;
     justify-content: space-around;
 }
 
-.onglets a {
+.tabs a {
     text-decoration: none;
     font-family: "Raleway";
 }
 
-.inscription {
+.register {
     display: flex;
 }
 
-.inscription ul {
+.register ul {
     padding: 0;
 }
 
-.inscription li {
+.register li {
     font-family: "RalewayBold";
     color: #0065FC;
 }
@@ -66,17 +66,17 @@ header {
 /* MAIN */
 
 main {
-    margin:40px;
+    margin: 40px;
 }
 
 /* SECTION RECHERCHE ET FILTRES */
 
-.txt-filtres h3 {
+.filters-head h3 {
     font-family: "RalewayBold";
     margin-bottom: 15px;
 }
 
-.txt-filtres p {
+.filters-head p {
     font-family: "Raleway";
     margin-top: 0;
     margin-bottom: 20px;
@@ -86,7 +86,7 @@ main {
     margin-bottom: 30px;
 }
 
-.search-box button{
+.search-box button {
     font-family: "RalewayBold";
     font-size: 14px;
     color: #FFF;
@@ -95,7 +95,7 @@ main {
     width: 130px;
     border-width: 0;
     border-radius: 0 15px 15px 0;
-    margin:-5px;
+    margin: -5px;
 }
 
 .search-box button i {
@@ -104,10 +104,10 @@ main {
 
 .search-box input {
     height: 50px;
-    width:235px;
-    border-width:1px;
+    width: 235px;
+    border-width: 1px;
     border-color: #F2F2F2;
-    border-style:solid;
+    border-style: solid;
 }
 
 .search-box input::placeholder {
@@ -123,72 +123,72 @@ main {
     background-color: #F2F2F2;
     border-radius: 15px 0 0 15px;
     position: relative;
-    top:20px;
-    left:5px;
+    top: 20px;
+    left: 5px;
 }
 
 .fa-map-marker-alt:before {
-    position:absolute;
-    top:18px;
-    left:20px;
+    position: absolute;
+    top: 18px;
+    left: 20px;
 }
 
-.filtres {
-    width:70%;
+.filters {
+    width: 70%;
     display: flex;
     justify-content: space-between;
 }
 
-.filtres p {
+.filters p {
     font-family: "RalewayBold";
 }
 
-.filtres-box {
-    display:flex;
+.filters-box {
+    display: flex;
     justify-content: space-between;
-    position:relative;
+    position: relative;
 }
 
-.filtres-box i {
+.filters-box i {
     background-color: #DEEBFF;
-    height:50px;
-    width:50px;
+    height: 50px;
+    width: 50px;
     border-radius: 50px;
 }
 
 .fa-money-bill-wave:before {
-    position:absolute;
-    top:18px;
-    left:15px;
+    position: absolute;
+    top: 18px;
+    left: 15px;
 }
 
 .fa-child:before {
-    position:absolute;
-    top:18px;
-    left:19px;
+    position: absolute;
+    top: 18px;
+    left: 19px;
 }
 
 .fa-heart:before {
-    position:absolute;
-    top:18px;
-    left:18px;
+    position: absolute;
+    top: 18px;
+    left: 18px;
 }
 
 .fa-dog:before {
-    position:absolute;
-    top:16px;
-    left:18px;
+    position: absolute;
+    top: 16px;
+    left: 18px;
 }
 
 .blue {
-    color:#0065FC;
+    color: #0065FC;
 }
 
-.filtres-choice {
+.filters-choice {
     text-align: center;
-    height:50px;
-    margin-left:-50px;
-    padding:0 1em 0 4em;
+    height: 50px;
+    margin-left: -50px;
+    padding: 0 1em 0 4em;
     border-style: solid;
     border-color: #F2F2F2;
     border-width: 1px;
@@ -201,23 +201,23 @@ main {
 }
 
 .info i {
-    color:#0065FC;
-    border-style:solid;
+    color: #0065FC;
+    border-style: solid;
     border-color: #F2F2F2;
     border-radius: 50px;
     border-width: 1px;
-    height:25px;
-    width:25px;
-    position:relative;
+    height: 25px;
+    width: 25px;
+    position: relative;
 }
 
 .fa-info:before {
-    position:absolute;
-    left:10px;
-    top:5px;
+    position: absolute;
+    left: 10px;
+    top: 5px;
 }
 
-.info p{
+.info p {
     font-family: "Raleway";
     margin: 5px 10px;
 }
