--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,11 +1,19 @@
 @font-face {
-    font-family: "Raleway";
-    src: url(../fonts/Raleway-VariableFont_wght.ttf) format("truetype");
+    font-family: 'Raleway';
+    src: url('Raleway-Bold.woff2') format('woff2'),
+        url('Raleway-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-    font-family: "RalewayBold";
-    src: url(../fonts/Raleway-Bold.ttf) format("truetype");
+    font-family: 'Raleway';
+    src: url('Raleway-Thin.woff2') format('woff2'),
+        url('Raleway-Thin.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
 }
 
 /* HEADER */
@@ -47,7 +55,7 @@ header {
 
 .tabs a {
     text-decoration: none;
-    font-family: "Raleway";
+    font-family: 'Raleway';
 }
 
 .register {
@@ -59,7 +67,8 @@ header {
 }
 
 .register li {
-    font-family: "RalewayBold";
+    font-family: 'Raleway';
+    font-weight: bold;
     color: #0065FC;
 }
 
@@ -72,13 +81,13 @@ main {
 /* SECTION RECHERCHE ET FILTRES */
 
 .filters-head h3 {
-    font-family: "RalewayBold";
+    font-family: 'Raleway';
+    font-weight: bold;
     margin-bottom: 15px;
 }
 
 .filters-head p {
-    font-family: "Raleway";
-    margin-top: 0;
+    font-family: 'Raleway';
     margin-bottom: 20px;
 }
 
@@ -87,7 +96,8 @@ main {
 }
 
 .search-box button {
-    font-family: "RalewayBold";
+    font-family: 'Raleway';
+    font-weight: bold;
     font-size: 14px;
     color: #FFF;
     background-color: #0065FC;
@@ -111,7 +121,8 @@ main {
 }
 
 .search-box input::placeholder {
-    font-family: "RalewayBold";
+    font-family: 'Raleway';
+    font-weight: bold;
     color: #000;
     text-align: center;
     font-size: 14px;
@@ -145,7 +156,8 @@ main {
 }
 
 .filters p {
-    font-family: "RalewayBold";
+    font-family: 'Raleway';
+    font-weight: bold;
 }
 
 .p-filters {
@@ -228,6 +240,6 @@ main {
 }
 
 .info p {
-    font-family: "Raleway";
+    font-family: 'Raleway';
     margin: 5px 10px;
 }
