--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -310,11 +310,15 @@ main {
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
 }
 
 .lodging-box-info {
     margin-left: 15px;
+}
+
+.lodging-box-info span {
+    font-weight: bold;
 }
 
 .lodging-box h4 {
@@ -381,7 +385,7 @@ main {
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
 }
 
 .popular-box img {
@@ -404,4 +408,8 @@ main {
     color: #000;
     padding: 0 40px 25px 0;
     margin: 0;
+}
+
+.popular-box span {
+    font-weight: bold;
 }
