--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 481px) and (max-width: 850px) {
+@media only screen and (min-width: 481px) and (max-width: 950px) {
     body {
         margin: 0;
     }
@@ -71,6 +71,7 @@
 
     .filters-ctg {
         justify-content: flex-start;
+        width: 60%;
     }
 
     .filters-box {
@@ -142,6 +143,52 @@
 
     .more p {
         padding-left: 10%;
+        margin: 0;
+    }
+
+    .activities-section img {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 951px) and (max-width: 1100px) {
+    .popular-section {
+        height: 600px;
+    }
+
+    .lodging-section {
+        max-width: 350px;
+        padding: 50px 0 10px 60px;
+    }
+
+    .filters-ctg {
+        justify-content: flex-start;
+        width: 60%;
+    }
+
+    .filters-box {
+        justify-content: flex-start;
+    }
+
+}
+
+@media only screen and (min-width: 1101px) and (max-width: 1350px) {
+    .filters-ctg {
+        width: 80%;
+    }
+    .lodging-section {
+        width: 50%;
+    }
+
+    #lepanier {
+        visibility: hidden;
+        height: 0;
+        margin: 0;
+    }
+
+    #chezamina {
+        visibility: hidden;
+        height: 0;
         margin: 0;
     }
 }
