--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -151,14 +151,14 @@
     }
 
     .lodging-section h2 {
-        padding: 30px 0 0 30px;
+        padding: 30px 0 0 20px;
     }
 
     .m-lodging {
         flex-wrap: nowrap;
         flex-direction: column;
-        padding: 10px 0 0 30px;
-        width: 80%;
+        padding: 10px 0 0 20px;
+        width: 85%;
     }
 
     .more p {
@@ -186,8 +186,22 @@
         margin-bottom: 0;
     }
 
-    .activities-section img {
-        width: 50%;
+    .activities-section {
+        flex-direction: column;
+        width: 90%;
+        margin: 20px;
+    }
+
+    .activities-box img {
+        width: 100%;
+    }
+
+    .activities-box {
+        margin-bottom: 25px;
+    }
+
+    #activities {
+        margin: 45px 0 25px 20px;
     }
 
 }
