--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -17,9 +17,12 @@
 }
 
 /* HEADER */
+body {
+    margin:0;
+}
 
 header {
-    margin: 0 40px 40px 40px;
+    margin: 0 50px 50px 50px;
     height: 100px;
     display: flex;
 }
@@ -92,7 +95,7 @@ header {
 /* MAIN */
 
 main {
-    margin: 30px;
+    margin: 40px;
 }
 
 /* SECTION RECHERCHE ET FILTRES */
@@ -452,4 +455,28 @@ main {
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+footer {
+    background-color: #F2F2F2;
+}
+
+.footer {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.footer h5 {
+    font-family: 'Raleway';
+    font-weight: bold;
+    font-size: 16px;
+    padding-inline-start: 40px;
+    margin: 50px 0 20px 0;
+}
+
+.footer ul {
+    list-style: none;
+    font-family: 'Raleway';
+    line-height: 2em;
 }
