--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -166,6 +166,18 @@
     }
 }
 
+@media only screen and (min-width: 481px) and (max-width: 800px) {
+    .footer {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .footer div {
+        width: 300px;
+    }
+}
+
 @media only screen and (min-width: 951px) and (max-width: 1100px) {
     .popular-section {
         height: 600px;
@@ -216,6 +228,7 @@
     .activities-section {
         flex-wrap: wrap;
         justify-content: space-around;
+        width: 85%;
     }
 
     .activities-box {
