--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'Raleway';
-    src: url('Raleway-Bold.woff2') format('woff2'),
-        url('Raleway-Bold.woff') format('woff');
+    font-family: 'Raleway',;
+    src: url('../fonts/Raleway-Bold.woff2') format('woff2'),
+        url('../fonts/Raleway-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -9,11 +9,22 @@
 
 @font-face {
     font-family: 'Raleway';
-    src: url('Raleway-Thin.woff2') format('woff2'),
-        url('Raleway-Thin.woff') format('woff');
+    src: url('../fonts/Raleway-Thin.woff2') format('woff2'),
+        url('../fonts/Raleway-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
+}
+
+@font-face {
+    font-family: 'Raleway';
+    src: url('../fonts/Raleway-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Raleway';
+    src: url('../fonts/Raleway-Regular.ttf') format('truetype');
 }
 
 /* HEADER */
@@ -62,18 +73,27 @@ header {
 
 .tabs a {
     text-decoration: none;
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
 }
 
 #lodging-tab {
     padding-top: 40px;
     border-top-style: solid;
     border-color: #0065FC;
-    border-width: 2px;
+    border-width: 3px;
+    width: 160px;
+    text-align: center;
+}
+
+#lodging-tab a {
+    color: #0065FC;
 }
 
 #activities-tab {
     padding-top: 42px;
+}
+
+#activities-tab a {
     color: #000;
 }
 
@@ -87,7 +107,7 @@ header {
 }
 
 .register li {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     color: #0065FC;
 }
@@ -101,13 +121,13 @@ main {
 /* SECTION RECHERCHE ET FILTRES */
 
 .filters-head h3 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     margin-bottom: 15px;
 }
 
 .filters-head p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     margin-bottom: 20px;
 }
 
@@ -116,7 +136,7 @@ main {
 }
 
 .search-box button {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 14px;
     color: #FFF;
@@ -141,7 +161,7 @@ main {
 }
 
 .search-box input::placeholder {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     color: #000;
     text-align: center;
@@ -176,7 +196,7 @@ main {
 }
 
 .filters p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
 }
 
@@ -266,7 +286,7 @@ main {
 }
 
 .info p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     margin: 5px 10px;
 }
 
@@ -287,14 +307,14 @@ main {
 }
 
 .lodging-section h2 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
     margin: 0 0 25px 0;
 }
 
 .more p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
 }
 
@@ -325,7 +345,7 @@ main {
 }
 
 .lodging-box h4 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     color: #000;
     font-size: 16px;
@@ -333,7 +353,7 @@ main {
 }
 
 .lodging-box p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: normal;
     color: #000;
     margin: 10px 0 10px 0;
@@ -371,7 +391,7 @@ main {
 }
 
 .popular-section h3 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
     margin: 0 0 25px 0;
@@ -398,7 +418,7 @@ main {
 }
 
 .popular-box h4 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     color: #000;
     font-size: 16px;
@@ -407,7 +427,7 @@ main {
 }
 
 .popular-box p {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     color: #000;
     padding: 0 40px 25px 0;
     margin: 0;
@@ -420,7 +440,7 @@ main {
 /* SECTION ACTIVITES */
 
 #activities {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     margin: 65px 0 25px 0;
 }
@@ -435,7 +455,7 @@ main {
 }
 
 .activities-box h4 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     color: #000;
     margin: 0;
@@ -468,7 +488,7 @@ footer {
 }
 
 .footer h5 {
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
     padding-inline-start: 40px;
@@ -477,6 +497,6 @@ footer {
 
 .footer ul {
     list-style: none;
-    font-family: 'Raleway';
+    font-family: 'Raleway', Arial, sans-serif;
     line-height: 2em;
 }
