--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -10,7 +10,7 @@
 
     .header-nav {
         flex-direction: column;
-        width: 90%;
+        width: 100%;
     }
 
     .logo {
@@ -32,24 +32,29 @@
         padding: 0;
         width: 100%;
         height: 50px;
+        justify-content: space-between;
     }
 
     #lodging-tab {
         padding-top: 20px;
         border-top-style: none;
         border-bottom-style: solid;
+        width: 50%;
     }
 
     #activities-tab {
         padding-top: 20px;
         border-bottom-style: solid;
         border-color: #f2f2f2;
-        border-width: 2px;
+        border-width: 3px;
+        width: 50%;
+        text-align: center;
     }
 
     .register {
         order: -3;
         justify-content: flex-end;
+        width: 85%;
     }
 
     main {
