--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -28,20 +28,25 @@
 }
 
 /* HEADER */
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin:0;
 }
 
 header {
-    margin: 0 50px 50px 50px;
-    height: 100px;
     display: flex;
+    width: 95%;
+    margin: auto;
+    height: 100px;
 }
 
 .logo {
     display: flex;
     align-items: center;
-    width: 66%;
+    width: 60%;
 }
 
 .logo img {
@@ -50,7 +55,8 @@ header {
 
 .header-nav {
     display: flex;
-    width: 50%;
+    width: 40%;
+    padding-top: 3px;
     justify-content: space-around;
 }
 
@@ -66,44 +72,29 @@ header {
 .tabs ul {
     display: flex;
     width: 100%;
-    height: 100px;
+    padding: 0;
     margin: 0;
     justify-content: space-around;
+    align-items: center;
 }
 
 .tabs a {
     text-decoration: none;
+    color: #000;
     font-family: 'Raleway', Arial, sans-serif;
+    padding: 40px 20px;
 }
 
-#lodging-tab {
-    padding-top: 40px;
+.tabs a:hover {
+    color: #0065FC;
     border-top-style: solid;
     border-color: #0065FC;
     border-width: 3px;
-    width: 160px;
-    text-align: center;
-}
-
-#lodging-tab a {
-    color: #0065FC;
-}
-
-#activities-tab {
-    padding-top: 42px;
-}
-
-#activities-tab a {
-    color: #000;
 }
 
 .register {
     display: flex;
     align-items: center;
-}
-
-.register ul {
-    padding: 0;
 }
 
 .register li {
@@ -115,7 +106,8 @@ header {
 /* MAIN */
 
 main {
-    margin: 40px;
+    width: 95%;
+    margin: auto;
 }
 
 /* SECTION RECHERCHE ET FILTRES */
@@ -186,10 +178,10 @@ main {
 
 .filters {
     display: flex;
+    align-items: center;
 }
 
 .filters-ctg {
-    width: 65%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -200,13 +192,8 @@ main {
     font-weight: bold;
 }
 
-.p-filters {
-    padding-top: 10px;
-}
-
 .filters-box {
     display: flex;
-    justify-content: space-between;
     position: relative;
     margin: 12px;
 }
@@ -216,6 +203,8 @@ main {
     height: 50px;
     width: 50px;
     border-radius: 50px;
+    position: absolute;
+    top: 1px;
 }
 
 .fa-money-bill-wave:before {
@@ -247,19 +236,19 @@ main {
 }
 
 .filters-choice {
-    text-align: center;
     height: 50px;
-    margin-left: -50px;
     padding: 0 1em 0 4em;
     border-style: solid;
     border-color: #F2F2F2;
     border-width: 1px;
     border-radius: 50px;
+    position: relative;
 }
 
 .filters-choice:hover {
     border-color: #0065FC;
     border-width: 3px;
+    height: 50px;
     color: #0065FC;
 }
 
@@ -294,23 +283,22 @@ main {
 .results {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    margin-top: 35px;
 }
 
 .lodging-section {
-    padding: 50px 40px;
+    padding: 3%;
     background-color: #F2F2F2;
     border-radius: 15px;
-    margin-top: 35px;
     width: 60%;
-    max-width: 800px;
 }
 
 .lodging-section h2 {
     font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
-    margin: 0 0 25px 0;
+    margin-top: 0;
+    margin-bottom: 25px;
 }
 
 .more p {
@@ -329,7 +317,6 @@ main {
 }
 
 .lodging-box {
-    padding: 5px 5px 12px 5px;
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
@@ -337,7 +324,7 @@ main {
 }
 
 .lodging-box-info {
-    margin-left: 15px;
+    padding: 1em;
 }
 
 .lodging-box-info span {
@@ -349,7 +336,7 @@ main {
     font-weight: bold;
     color: #000;
     font-size: 16px;
-    margin: 12px 0 0 0;
+    margin: 0;
 }
 
 .lodging-box p {
@@ -360,12 +347,8 @@ main {
 }
 
 .lodging-box img {
-    width: 230px;
+    padding: 5px;
     border-radius: 15px 15px 0 0;
-}
-
-.fa-star {
-    margin-bottom: 12px;
 }
 
 .grey {
@@ -375,6 +358,7 @@ main {
 .popular-head {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .fa-chart-line {
@@ -382,29 +366,32 @@ main {
 }
 
 .popular-section {
-    padding: 50px 40px;
+    padding: 3%;
     background-color: #F2F2F2;
     border-radius: 15px;
-    margin-top: 35px;
-    width: 25%;
-    min-width: 340px;
+    width: 30%;
 }
 
 .popular-section h3 {
     font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 22px;
-    margin: 0 0 25px 0;
+    margin: 0;
 }
 
 .m-popular a {
     text-decoration: none;
 }
 
+.m-popular {
+    display: flex;
+    height: 100%;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
 .popular-box {
-    height: 135px;
-    width: 345px;
-    padding: 5px 5px 5px 5px;
+    display: flex;
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
@@ -412,9 +399,16 @@ main {
 }
 
 .popular-box img {
-    float: left;
-    margin-right: 20px;
     border-radius: 15px 0 0 15px;
+    padding: 5px;
+}
+
+.popular-box-img {
+    display: flex;
+}
+
+.popular-box-info {
+    padding: 1em;
 }
 
 .popular-box h4 {
@@ -423,14 +417,12 @@ main {
     color: #000;
     font-size: 16px;
     margin: 0;
-    padding: 20px 40px 10px 0;
 }
 
 .popular-box p {
     font-family: 'Raleway', Arial, sans-serif;
     color: #000;
-    padding: 0 40px 25px 0;
-    margin: 0;
+    margin: 1em 0;
 }
 
 .popular-box span {
@@ -448,6 +440,7 @@ main {
 .activities-section {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .activities-section a {
@@ -459,7 +452,7 @@ main {
     font-weight: bold;
     color: #000;
     margin: 0;
-    padding: 20px 0 20px 20px;
+    padding: 5%;
 }
 
 .activities-box img {
