--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -1,5 +1,12 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 @font-face {
-    font-family: 'Raleway',;
+    font-family: 'Raleway';
     src: url('../fonts/Raleway-Bold.woff2') format('woff2'),
         url('../fonts/Raleway-Bold.woff') format('woff');
     font-weight: bold;
@@ -27,16 +34,21 @@
     src: url('../fonts/Raleway-Regular.ttf') format('truetype');
 }
 
-/* HEADER */
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
+
 
 body {
     margin:0;
 }
 
+/* MENU */
+
 header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 95%;
     margin: auto;
@@ -44,8 +56,12 @@ header {
 }
 
 .logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 60%;
 }
 
@@ -54,10 +70,13 @@ header {
 }
 
 .header-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 40%;
     padding-top: 3px;
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
 }
 
 .header-nav ul {
@@ -65,17 +84,24 @@ header {
 }
 
 .tabs {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 75%;
 }
 
 .tabs ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     padding: 0;
     margin: 0;
-    justify-content: space-around;
-    align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .tabs a {
@@ -93,8 +119,12 @@ header {
 }
 
 .register {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .register li {
@@ -102,8 +132,6 @@ header {
     font-weight: bold;
     color: #0065FC;
 }
-
-/* MAIN */
 
 main {
     width: 95%;
@@ -127,6 +155,70 @@ main {
     margin-bottom: 30px;
 }
 
+.fa-map-marker-alt {
+    height: 50px;
+    width: 50px;
+    background-color: #F2F2F2;
+    border-radius: 15px 0 0 15px;
+    position: relative;
+    top: 21px;
+    left: 5px;
+}
+
+.fa-map-marker-alt:before {
+    position: absolute;
+    top: 18px;
+    left: 20px;
+}
+
+.search-box input {
+    height: 50px;
+    width: 235px;
+    border-width: 1px;
+    border-color: #F2F2F2;
+    border-style: solid;
+}
+
+.search-box input::-webkit-input-placeholder {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+}
+
+.search-box input::-moz-placeholder {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+}
+
+.search-box input:-ms-input-placeholder {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+}
+
+.search-box input::-ms-input-placeholder {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+}
+
+.search-box input::placeholder {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+}
+
 .search-box button {
     font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
@@ -144,47 +236,13 @@ main {
     visibility: hidden;
 }
 
-.search-box input {
-    height: 50px;
-    width: 235px;
-    border-width: 1px;
-    border-color: #F2F2F2;
-    border-style: solid;
-}
-
-.search-box input::placeholder {
-    font-family: 'Raleway', Arial, sans-serif;
-    font-weight: bold;
-    color: #000;
-    text-align: center;
-    font-size: 14px;
-}
-
-.fa-map-marker-alt {
-    height: 50px;
-    width: 50px;
-    background-color: #F2F2F2;
-    border-radius: 15px 0 0 15px;
-    position: relative;
-    top: 21px;
-    left: 5px;
-}
-
-.fa-map-marker-alt:before {
-    position: absolute;
-    top: 18px;
-    left: 20px;
-}
-
 .filters {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-}
-
-.filters-ctg {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .filters p {
@@ -192,11 +250,26 @@ main {
     font-weight: bold;
 }
 
+.filters-ctg {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+
 .filters-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
     margin: 12px;
 }
+
+/* ICONES FILTRES */
 
 .filters-box i {
     background-color: #DEEBFF;
@@ -235,6 +308,8 @@ main {
     color: #0065FC;
 }
 
+/* */
+
 .filters-choice {
     height: 50px;
     padding: 0 1em 0 4em;
@@ -253,6 +328,8 @@ main {
 }
 
 .info {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 35px;
 }
@@ -281,8 +358,12 @@ main {
 
 /* SECTION HEBERGEMENTS */
 .results {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 35px;
 }
 
@@ -301,15 +382,15 @@ main {
     margin-bottom: 25px;
 }
 
-.more p {
-    font-family: 'Raleway', Arial, sans-serif;
-    font-weight: bold;
-}
-
 .m-lodging {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .m-lodging a {
@@ -320,15 +401,17 @@ main {
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+}
+
+.lodging-box img {
+    padding: 5px;
+    border-radius: 15px 15px 0 0;
 }
 
 .lodging-box-info {
     padding: 1em;
-}
-
-.lodging-box-info span {
-    font-weight: bold;
 }
 
 .lodging-box h4 {
@@ -346,30 +429,38 @@ main {
     margin: 10px 0 10px 0;
 }
 
-.lodging-box img {
-    padding: 5px;
-    border-radius: 15px 15px 0 0;
+.lodging-box-info span {
+    font-weight: bold;
+}
+
+.more p {
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
 }
 
 .grey {
     color: #f2f2f2;
 }
 
-.popular-head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.fa-chart-line {
-    font-size: 20px;
-}
+/* SECTION HEBERGEMENTS POPULAIRES */
 
 .popular-section {
     padding: 3%;
     background-color: #F2F2F2;
     border-radius: 15px;
     width: 30%;
+}
+
+.popular-head {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .popular-section h3 {
@@ -379,32 +470,48 @@ main {
     margin: 0;
 }
 
+.fa-chart-line {
+    font-size: 20px;
+}
+
+.m-popular {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+
 .m-popular a {
     text-decoration: none;
 }
 
-.m-popular {
-    display: flex;
-    height: 100%;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
 .popular-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 30px;
     background-color: #FFF;
     border-radius: 15px;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+}
+
+.popular-box-img {
+    border-radius: 15px 0 0 15px;
+    padding: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 .popular-box img {
     border-radius: 15px 0 0 15px;
-    padding: 5px;
-}
-
-.popular-box-img {
-    display: flex;
 }
 
 .popular-box-info {
@@ -438,13 +545,27 @@ main {
 }
 
 .activities-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 50px;
 }
 
 .activities-section a {
     text-decoration: none;
+}
+
+.activities-box {
+    border-radius: 15px;
+    -webkit-box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
+}
+
+.activities-box img {
+    border-radius: 15px 15px 0 0;
 }
 
 .activities-box h4 {
@@ -455,36 +576,41 @@ main {
     padding: 5%;
 }
 
-.activities-box img {
-    border-radius: 15px 15px 0 0;
-}
-
-.activities-box {
-    border-radius: 15px;
-    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.3);
-}
-
 .activities-m {
+    display:-webkit-box;
+    display:-ms-flexbox;
     display:flex;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
+
+/* FOOTER */
 
 footer {
     background-color: #F2F2F2;
 }
 
 .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 80%;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .footer h5 {
     font-family: 'Raleway', Arial, sans-serif;
     font-weight: bold;
     font-size: 16px;
-    padding-inline-start: 40px;
+    -webkit-padding-start: 40px;
+            padding-inline-start: 40px;
     margin: 50px 0 20px 0;
 }
 
