--- a/CSS/tablette.css
+++ b/CSS/tablette.css
@@ -1,4 +1,13 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 @media only screen and (max-width: 980px) {
+    /* MENU */
+
     header {
         height: auto;
         margin: 0;
@@ -7,20 +16,25 @@
 
     .logo {
         position: absolute;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
         width: 40%;
         padding-top: 3px;
-    }
-
-    .header-nav {
-        flex-direction: column;
-        width: 100%;
-        height: 130px;
     }
 
     .logo img {
         margin: 20px;
         height: 40px;
+    }
+
+    .header-nav {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        width: 100%;
+        height: 130px;
     }
 
     .tabs {
@@ -48,28 +62,38 @@
     }
 
     .register {
-        order: -3;
-        justify-content: flex-end;
+        -webkit-box-ordinal-group: -2;
+            -ms-flex-order: -3;
+                order: -3;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
         width: 85%;
         height: 80%;
     }
+
+    /* SECTION RECHERCHE ET FILTRES */
 
     .filters-head h3 {
         font-size: 22px;
     }
 
+    /* SECTION HEBERGEMENTS POPULAIRES */
+
     .popular-head {
-        justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 980px) {
-    /* MAIN */
 
     main {
         width: 100%;
         margin: 0;
     }
+
+    /* SECTION RECHERCHE ET FILTRES */
 
     .search {
         width: 95%;
@@ -82,10 +106,6 @@
 
     .search-section {
         text-align: center;
-    }
-
-    .filters-ctg {
-        justify-content: flex-start;
     }
 
     .search-box button {
@@ -104,16 +124,33 @@
     }
 
     .filters {
-        justify-content: center;
-        align-items: baseline;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: baseline;
+            -ms-flex-align: baseline;
+                align-items: baseline;
+    }
+
+    .filters-ctg {
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
     }
 
     .info {
-        justify-content: center; 
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center; 
     }
 
+    /* SECTION HEBERGEMENTS */
+
     .results {
-        flex-direction: column-reverse;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: column-reverse;
+                flex-direction: column-reverse;
     }
 
     .popular-section {
@@ -138,6 +175,8 @@
         margin-top: 20px;
     }
 
+    /* SECTION ACTIVITES */
+
     #activities {
         text-align: center;
         margin-top: 20px;
@@ -145,8 +184,13 @@
     }
 
     .activities-section {
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     .activities-box {
@@ -156,8 +200,13 @@
 
 @media only screen and (max-width: 800px) {
     .footer {
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         width: 100%;
     }
 
@@ -177,6 +226,8 @@
 
     .popular-section {
         width: 35%;
+        height: -webkit-fit-content;
+        height: -moz-fit-content;
         height: fit-content;
     }
 
