--- a/CSS/desktop.css
+++ b/CSS/desktop.css
@@ -177,6 +177,9 @@ main {
     border-width: 1px;
     border-color: #F2F2F2;
     border-style: solid;
+    text-align: center;
+    font-family: 'Raleway', Arial, sans-serif;
+    font-weight: bold;
 }
 
 .search-box input::-webkit-input-placeholder {
